tests/compile_failures/splitbits_missing_input.rs
use splitbits::splitbits;

fn main() {
    splitbits!(min=u8, "aaaabbbb");
}
