tests/compile_failures/splitbits_missing_input.stderr
error: proc macro panicked
 --> tests/compile_failures/splitbits_missing_input.rs:4:5
  |
4 |     splitbits!(min=u8, "aaaabbbb");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: Either an input or template was missing, but found a setting instead.
